[gd_scene load_steps=3 format=3 uid="uid://cdmv5tnkgvi3d"]

[ext_resource type="Script" uid="uid://bo6mqjvhu650i" path="res://scripts/killzone.gd" id="1_mj4d1"]
[ext_resource type="AudioStream" uid="uid://coon23tts1wpd" path="res://assets/sounds/hurt.wav" id="2_kl8fp"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_mj4d1")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_kl8fp")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
